--- a/assets/less/partials/video-item.less
+++ b/assets/less/partials/video-item.less
@@ -31,51 +31,3 @@
   z-index: 1;
   margin-top: -15px;
 }
-
-
-.scrolling {
-  vertical-align: top;
-  display: inline-block;
-  .video-main-wrapper .img-scale {
-    .box-shadow(1px 10px 43px -9px rgba(0,0,0,0.75););
-    width: 50%;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    height: 90px;
-    position: fixed;
-  }
-  .label-container {
-    z-index: 2;
-    position: fixed;
-    padding: 7.5px 10px 7.5px;
-    top: 0;
-    left: 0;
-    .header-text {
-      font-size: 20px;
-    }
-  }
-  
-  .info-wrapper {
-    .box-shadow(1px 10px 43px -9px rgba(0,0,0,0.75););
-    background-color: @white;
-    width: 50%;
-    z-index: 2;
-    top: 0;
-    position: fixed;
-    right: 0;
-    padding: 20px 10px 20px 10px;
-    .header-text {
-      font-size: 19px
-    }
-  }
-
-  .transition(all 1s ease);
-  .video-share,
-  .details-container .badge,
-  .details-container .meta,
-  .links-container {
-    display: none;
-  }
-
-}
